--- a/src/assets/css/turnkey-styles.css
+++ b/src/assets/css/turnkey-styles.css
@@ -29,10 +29,6 @@ html,body {
   text-decoration: none;
 }
 
-/* .btn-primary:hover {
-  background: red;
-} */
-
 .btn-full-width {
     width: 100%;
 }
@@ -99,14 +95,14 @@ html,body {
 }
 
 .base-side-nav {
-  /*width: 15%;*/
+  width: 15%;
   min-height: 90vh;
   padding: 10px;
   border-right: solid 1px #eee;
 }
 
 .base-content {
-  /*width: 85%;*/
+  width: 85%;
   min-height: 90vh;
   background: #f5f6f8;
 }
