--- a/src/app/features/auth/verification/verification.component.html
+++ b/src/app/features/auth/verification/verification.component.html
@@ -1,3 +1,4 @@
+<app-spinner *ngIf="isLoading"></app-spinner>
 <div class="container">
     <div class="form-content">
         <div class="logo-lg">
