--- a/src/assets/css/turnkey-styles.css
+++ b/src/assets/css/turnkey-styles.css
@@ -278,6 +278,24 @@ h5.htxt {
 .form-error-text {
   float:left;
 }
+.page-header {
+  font-weight: 500 !important;
+  font-size: 14px;
+  color: #000000;
+}
+.filter-btn{
+  background: #FAFAFA;
+  box-sizing: border-box;
+
+  letter-spacing: 1.25px;
+  text-transform: uppercase;
+
+  filter: drop-shadow(0px 4px 4px rgba(61, 164, 255, 0.23));
+  color: #3A3B3F;
+}
+.fa-filter{
+  color: #9EA0A5;
+}
 /*Common ends*/
 
 
