VQ-93 View Staff listing from Accounts link on subheader

--- a/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
+++ b/src/app/features/base/components/header-sub-menu/header-sub-menu.component.html
@@ -4,10 +4,10 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0" id="navbar">
                   <li class="nav-item">
-                      <a class="nav-link" href="#">Dashboard</a>
+                      <a class="nav-link" href="#" routerLink="/home/dashboard">Dashboard</a>
                   </li>
                   <li class="nav-item dropdown">
-                      <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                      <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false" routerLink="/home/entity/staff">
                           Accounts
                       </a>
                       <ul class="dropdown-menu">
