--- a/src/app/features/entities/components/staff/list-staff/list-staff.component.html
+++ b/src/app/features/entities/components/staff/list-staff/list-staff.component.html
@@ -1,6 +1,6 @@
-<div>
+<div class="mx-5">
   <!-- Top Header Text and Breadcrumb !-->
-  <div class="d-flex justify-content-between my-4 ms-4">
+  <div class="d-flex justify-content-between my-4 ">
     <div class="mr-auto p-2">
       <h4 class="htxt page-header">Users</h4>
     </div>
@@ -11,14 +11,14 @@
   </div>
 
   <!-- Top Buttons !-->
-  <div class="d-flex my-4 ms-4">
+  <div class="d-flex my-4">
     <button type="button" class="btn btn-lg btn-primary rounded-1 px-4 me-3">New {{activeTab() === 'Individual' ? 'Staff' : 'Group'}}</button>
     <button type="button" class="btn btn-outline-primary px-4 me-3">Import Users</button>
     <button type="button" class="btn filter-btn rounded-1 px-4 me-3"> <i class="fa fa-filter pe-2"></i>Filter</button>
   </div>
 
   <!-- Tabs and Tab Content !-->
-  <div class="my-4 ms-4 me-4">
+  <div class="my-4">
     <nav>
       <ul class="nav nav-underline" id="nav-tab" role="tablist">
        <li class="nav-item" *ngFor=" let element of elements">
