--- a/src/app/features/entities/components/service-provider/list-service-provider/list-service-provider.component.html
+++ b/src/app/features/entities/components/service-provider/list-service-provider/list-service-provider.component.html
@@ -1,1 +1,28 @@
-<p>list-service-provider works!</p>
+<div class="mx-5">
+
+    <div class="d-flex justify-content-between my-4 ">
+        <div class="mr-auto p-2">
+          <h4 class="htxt page-header">Users</h4>
+        </div>
+        <div class="me-4">
+          <app-dynamic-breadcrumb [breadCrumbItems]="serviceProviderBreadCrumbItems">
+          </app-dynamic-breadcrumb>
+        </div>
+      </div>
+
+
+      <div class="d-flex my-4 ml-3">
+        <button type="button" class="btn btn-primary rounded-1 px-3 me-3">New Service Provider</button>
+        <button type="button" class="btn btn-outline-primary px-4 me-3">Import Service Provider</button>
+        <button type="button" class="btn filter-btn rounded-1 px-4 me-3"> <i class="fa fa-filter pe-2"></i>Filter</button>
+        
+      </div>
+
+      <div class="my-4 ms-4">
+        <app-dynamic-table
+          [tableDetails]="tableDetails"
+          (onLazyLoad)="lazyLoadServiceProviders($event)">
+        </app-dynamic-table>
+      </div>
+    
+</div>
