--- a/src/assets/css/turnkey-styles.css
+++ b/src/assets/css/turnkey-styles.css
@@ -280,8 +280,8 @@ h5.htxt {
 }
 .page-header {
   font-weight: 500 !important;
-  font-size: 14px;
-  color: #000000;
+  font-size: 20px;
+  color: #323a46;
 }
 .filter-btn{
   background: #FAFAFA;
