--- a/src/app/features/entities/components/client/list-client/list-client.component.html
+++ b/src/app/features/entities/components/client/list-client/list-client.component.html
@@ -1,19 +1,3 @@
-<!--<div class="base-content-section">
-  <div class="col-sm-12">
-    <p class="transactions">Clients</p>
-    <div class="card">
-      <div class="card-body">
-        <div class="row">
-          <div class="col-sm-12">
-            <app-dynamic-table
-              [tableDetails]="tableDetails"
-            ></app-dynamic-table>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>-->
 <div>
   <!-- Top Header Text and Breadcrumb !-->
   <div class="d-flex justify-content-between my-4 ms-4">
@@ -28,7 +12,7 @@
 
   <!-- Top Buttons !-->
   <div class="d-flex my-4 ms-4">
-    <button type="button" class="btn btn-lg btn-primary rounded-1 px-4 me-3">New Client</button>
+    <button type="button" class="btn btn-primary rounded-1 px-4 me-3">New Client</button>
     <button type="button" class="btn btn-outline-primary px-4 me-3">Import Client</button>
     <button type="button" class="btn filter-btn rounded-1 px-4 me-3"> <i class="fa fa-filter pe-2"></i>Filter</button>
   </div>
