VQ-90&VQ-91:: Entities Listing n New Entity Creation

--- a/src/app/features/entities/components/entity/list-entity/list-entity.component.html
+++ b/src/app/features/entities/components/entity/list-entity/list-entity.component.html
@@ -1,1 +1,23 @@
-<p>list-entity works!</p>
+<div>
+    <!-- Top Header Text and Breadcrumb !-->
+    <div class="d-flex justify-content-between my-4 ms-4">
+        <div class="mr-auto p-2">
+            <h6 class="htxt page-header">Entities</h6>
+        </div>
+        <div class="me-4">
+            <app-dynamic-breadcrumb [breadCrumbItems]="entityBreadCrumbItems">
+            </app-dynamic-breadcrumb>
+        </div>
+    </div>
+    <!-- Top Buttons !-->
+    <div class="d-flex my-4 ms-4">
+        <button type="button" class="btn btn-primary rounded-1 px-3 me-3" (click)="createEntity()">New Entity</button>
+        <button type="button" class="btn filter-btn rounded-1 px-4 me-3"> <i class="fa fa-filter pe-2"></i>Filter</button>
+    </div>
+    <div class="my-4 ms-4 me-4">
+        <app-dynamic-table 
+            [tableDetails]="tableDetails"
+            (onLazyLoad)="lazyLoadEntity($event)">
+        </app-dynamic-table>
+    </div>
+</div>
