--- a/src/app/features/entities/components/intermediary/list-intermediary/list-intermediary.component.html
+++ b/src/app/features/entities/components/intermediary/list-intermediary/list-intermediary.component.html
@@ -12,7 +12,7 @@
 
   <!-- Top Buttons !-->
   <div class="d-flex my-4 ms-4">
-    <button type="button" class="btn btn-primary rounded-1 px-3 me-3">New Account</button>
+    <button type="button" class="btn btn-primary rounded-1 px-3 me-3"  (click)="gotoEntityPage()">New Account</button>
     <button type="button" class="btn btn-outline-primary px-3 me-3">Import Account</button>
     <button type="button" class="btn filter-btn rounded-1 px-3 me-3"> <i class="fa fa-filter pe-2"></i>Filter</button>
   </div>
