--- a/src/app/features/entities/components/service-provider/list-service-provider/list-service-provider.component.html
+++ b/src/app/features/entities/components/service-provider/list-service-provider/list-service-provider.component.html
@@ -12,7 +12,7 @@
 
 
       <div class="d-flex my-4 ms-4 ">
-        <button type="button" class="btn btn-primary rounded-1 px-3 me-3">New Service Provider</button>
+        <button type="button" class="btn btn-primary rounded-1 px-3 me-3" (click)="gotoEntityPage()">New Service Provider</button>
         <button type="button" class="btn btn-outline-primary px-4 me-3">Import Service Provider</button>
         <button type="button" class="btn filter-btn rounded-1 px-4 me-3"> <i class="fa fa-filter pe-2"></i>Filter</button>
         
