--- a/src/app/features/entities/components/staff/list-staff/list-staff.component.html
+++ b/src/app/features/entities/components/staff/list-staff/list-staff.component.html
@@ -12,7 +12,7 @@
 
   <!-- Top Buttons !-->
   <div class="d-flex my-4">
-    <button type="button" class="btn btn-lg btn-primary rounded-1 px-4 me-3">New {{activeTab() === 'Individual' ? 'Staff' : 'Group'}}</button>
+    <button type="button" class="btn btn-primary rounded-1 px-3 me-3" (click)="gotoEntityPage()">New {{activeTab() === 'Individual' ? 'Staff' : 'Group'}}</button>
     <button type="button" class="btn btn-outline-primary px-4 me-3">Import Users</button>
     <button type="button" class="btn filter-btn rounded-1 px-4 me-3"> <i class="fa fa-filter pe-2"></i>Filter</button>
   </div>
